# ansible-workshop

./: .gitignore  README.md  run.yml
atividades/soluções/: run-script.yaml  venv.yaml
middleware/: Dockerfile  build.gradle  docker-compose.yml  get-products.http  new-user.http  post-order.http
notification-service/: .env  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
notification-service/docs/: index.html
notification-service/notification_service/: main.py
notification-service/notification_service/api_specification/: specification.yaml
notification-service/notification_service/model/: address.py  company.py  order.py  product.py  user.py
notification-service/notification_service/service/: email_service.py
notification-service/notification_service/template/: order_confirmation.html
notification-service/notification_service/topic/: __init__.py
notification_service/: Dockerfile  docker-compose.yml  pyproject.toml  run-without-docker.yml
notification_service/docs/: index.html
notification_service/notification_service/: main.py
order-processing-service/: .env  .gitignore  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  main.go
order-processing-service/cmd/: main.go
order-processing-service/config/: database.go
order-processing-service/dotenv/: dotenv.go
order-processing-service/exception/: error.go
order-processing-service/model/: models.go
order_processing_service/: go.mod  go.sum
user_service/: Dockerfile  build.gradle  docker-compose.yml  entrypoint.sh  run-with-ansible.yml  run.yml
(+77 files in other folders)
